# zhujian

./: .gitattributes  .gitignore  LICENSE  index.html  notebook.html  package-lock.json  package.json  readme.md  tsconfig.json  vite.config.ts
.github/workflows/: android-nightly.yml  android-release.yml  nightly.yml  release.yml
android/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
android/src/: api.ts  cardpanel.ts  filter.ts  images.ts  main.ts  panes.ts  swipe.ts  topics.ts  ui.ts
android/src-tauri/: Cargo.toml  tauri.conf.json
android/src-tauri/capabilities/: default.json  mobile.json
android/src-tauri/icons/: icon.icns
android/src-tauri/src/: coord.rs  lib.rs  update.rs
core/: Cargo.toml
core/migrations/: 0001_init.sql  0002_task_guards.sql  0003_note_history.sql  0004_note_archive_guard.sql  0005_task_archive.sql  0006_task_time.sql  0007_task_topic.sql  0008_task_order.sql  0009_task_archive_any_active.sql  0010_drop_ai_suggested.sql  0011_heal_note_history_triggers.sql  0012_task_note_one_to_one.sql  0013_task_confirming.sql  0014_unify_items.sql  0015_drop_topic_summary.sql  0016_add_item_image.sql  0017_add_item_sealed.sql  0018_add_item_born_stage.sql  0019_sync_meta.sql  0020_oplog.sql  0021_position_fractional.sql  0022_replay_exemption.sql  0023_image_seq_replay.sql  0024_oplog_origin_seq.sql  0025_boot_import_exemption.sql  0026_topic_color.sql  0027_sync_quarantine.sql  0028_space_profile.sql  0029_migrator_canary.sql  0030_add_item_done_at.sql  0031_topic_position_and_kind.sql
core/src/: clock.rs  db.rs  epoch.rs  frindex.rs  images.rs  lib.rs  move_item.rs  notes.rs  oplog.rs  replay.rs  repo.rs  spaces.rs  task.rs
core/src/sync/: boot.rs  convergence.rs  crypto.rs  engine.rs  mod.rs  pair.rs  supervisor.rs  transport.rs
docs/: design-rules.md  sync-protocol.md  why-no-framework.md
e2e/: wdio.conf.js
e2e/specs/: board-kind-filter.e2e.js  board-multitag.e2e.js  board-revert.e2e.js  board-seal.e2e.js  board-tag-color.e2e.js  board-tag-drag.e2e.js  board-tag-picker.e2e.js  board-trash.e2e.js  board.e2e.js  capture.e2e.js  compose-images.e2e.js  compose-recovery.e2e.js  deeplink.e2e.js  idea-stats.e2e.js  inbox-filter.e2e.js  inbox-interactions.e2e.js  inbox-kind-filter.e2e.js  inbox-manual.e2e.js  inbox-processed.e2e.js  inbox-tag-picker.e2e.js  inbox-trash.e2e.js  inbox.e2e.js  item-images.e2e.js  last-view.e2e.js  move-partial.e2e.js  search.e2e.js  support.js  sync-ui.e2e.js  task-time.e2e.js  topics.e2e.js  viewkeys.e2e.js  zz-verify-163.e2e.js  zz-verify-focustrap.e2e.js
scripts/: android-cdp.mjs  android-install-auto.mjs  build-android.mjs  cdp-acceptance-back-nav.js  cdp-acceptance-db-migrate.js  cdp-acceptance-p0-bars.js  cdp-acceptance-p0-confirm.js  cdp-acceptance-p1-touch.js  cdp-acceptance-p1-ux.js  cdp-acceptance-panes.js  cdp-acceptance-space-entry.js  cdp-acceptance-sync-ui.js  cdp-acceptance-timeline-filter-cleanup.js  cdp-acceptance-timeline-filter-seed.js  cdp-acceptance-timeline-filter.js  cdp-acceptance-topics-drag.js  cdp-acceptance-topics.js  cdp-acceptance-view-split-space.js  cdp-acceptance-view-split.js  check-lock-drift.mjs  desktop-cdp.mjs  export-public.mjs  gen-android-update-manifest.mjs  gen-update-manifest-ci.mjs  gen-update-manifest.mjs  replace-in-file.mjs  verify-db.mjs
server/: Cargo.toml
server/src/: conn.rs  hub.rs  lib.rs  main.rs  registry.rs  throttle.rs
server/tests/: integration.rs
site/: index.html
src/: autogrow.ts  board.css  board.ts  clipboard.ts  compose-draft.ts  controls.css  deeplink.ts  filter-bar.css  filter-bar.ts  hotkey-menu.css  hotkey-menu.ts  inbox.css  inbox.ts  item-images.css  item-images.ts  main.ts  notebook.ts  search.css  search.ts  space.ts  sync.css  sync.ts  tag-color.ts  tag-picker.ts  tasktime.css  tasktime.ts  theme.css  topics.css  topics.ts  update.css  update.ts
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  spaces.rs
sync-proto/: Cargo.toml
sync-proto/src/: lib.rs
