[package]
name = "sync-proto"
version = "0.1.0"
description = "朱笺同步信封层(sync-protocol §3)——服务器唯一可读面,server 与 src-tauri 双端 path 依赖共用"
edition = "2021"
rust-version = "1.77.2"

# 刻意不建 cargo workspace(sync-protocol §8:workspace 会把 target 挪仓根,
# 破坏 e2e 的 src-tauri/target/*/app.exe 锚)。本 crate 独立编译、独立 target/。

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# 字节字段(pubkey/sig/blob/nonce)按 CBOR bytes 编码——serde 默认把 Vec<u8>
# 编成逐元素数组,密文帧膨胀近一倍(与 src-tauri BlobChunk.data 同一处置)。
serde_bytes = "0.11"
ciborium = "0.2"
